# webterminal

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  package-lock.json  package.json  replit.md  tailwind.config.ts  vite.config.ts  vitest.config.ts
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  deploy.yml
client/: index.html
client/src/: App.test.tsx  index.css
client/src/components/: github-pages-banner.tsx
client/src/components/terminal/: command-bar.tsx  file-explorer.tsx  mobile-toolbar.tsx  terminal-input.tsx  terminal-output.tsx
client/src/hooks/: use-demo-terminal.tsx  use-real-terminal.tsx  use-terminal.tsx  use-websocket.tsx
client/src/lib/: github-pages.test.ts  github-pages.ts  utils.test.ts
client/src/pages/: terminal.tsx
client/src/test/: setup.ts
cpp-suite/: CMakeLists.txt  vcpkg.json
cpp-suite/apps/: CMakeLists.txt
cpp-suite/apps/launcher/: CMakeLists.txt
cpp-suite/apps/launcher/include/: app_manager.h  credit_widget.h  launcher_window.h
cpp-suite/apps/launcher/src/: app_manager.cpp  credit_widget.cpp  launcher_window.cpp  main.cpp
cpp-suite/shared/: CMakeLists.txt
cpp-suite/shared/ai-integration/: CMakeLists.txt
cpp-suite/shared/ai-integration/include/: credit_manager.h  ollama_client.h  openrouter_client.h  xeno_ai_client.h
cpp-suite/shared/ai-integration/src/: credit_manager.cpp  ollama_client.cpp  openrouter_client.cpp  xeno_ai_client.cpp
cpp-suite/shared/utils/: CMakeLists.txt
cpp-suite/shared/utils/include/: platform_utils.h
cpp-suite/shared/utils/src/: platform_utils.cpp
docs/: README.md  api.md  architecture.md  deployment-modes.md  deployment.md  development.md  github-pages.md  testing.md
examples/: README.md
scripts/: setup.sh
server/: routes.ts  storage.ts
shared/: schema.ts
